--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "handlebars": "^4.7.7",
     "is-word": "^1.0.4",
     "moment": "^2.29.4",
+    "nest-keycloak-connect": "^1.9.0",
     "pg": "^8.8.0",
     "puppeteer": "^18.0.5",
     "reflect-metadata": "^0.1.13",
